welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:56: error: Unmatched closing brace '}' ignored here
}
^